Code instead Design

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
 				}
 			}
 		</script>
-		<p style="text-align:center;font-size: 25px;color:#E83680;">Designed By: &nbsp; Jonathan Xiang</p>
+		<p style="text-align:center;font-size: 25px;color:#E83680;">Coded By: &nbsp; Jonathan Xiang</p>
 	</body>
 </html>
 
